# RS-VIO

./: Cargo.toml  README.md
config/: 4seasons.yaml  euroc_vio.yaml  tum_vi.yaml
feature_tracker/: .gitignore  Cargo.toml  README.md  log.txt
feature_tracker/config/: config.yaml
feature_tracker/src/: ext.rs  feature_tracker.rs  image_operations.rs  lib.rs  patch.rs  players.rs  viewer.rs
feature_tracker/src/feature_tracker/: feature_detection.rs  feature_tracking.rs
feature_tracker/src/players/: tartanair_player.rs
scripts/: run_4seasons.sh  run_euroc.sh  run_tum-vi.sh
src/: lib.rs  types.rs
src/datasets/: config.rs  euroc_player.rs  fourseasons_player.rs  mod.rs  tum_vi_player.rs
src/estimator/: estimator.rs  frame.rs  mod.rs  sliding_window.rs  state.rs
src/feature_tracker/: feature_tracker.rs  image_utilities.rs  mod.rs  patch.rs
src/optimization/: factors.rs  mod.rs  observer.rs  tests.rs
src/viewers/: mod.rs  rerun.rs  viewer.rs
