[package]
name = "feature_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
image = "0.25.9"
imageproc = "0.26.0"
log = "0.4.29"
nalgebra = "0.34.1"
rerun = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
rand = "0.9.2"
